# monobank-daily

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ty.toml
alembic/: env.py
alembic/versions/: 29301a8d8411_add_report_minute_column.py
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/uk/LC_MESSAGES/: messages.mo  messages.po
src/: app.py  logs.py  settings.py
src/database/: configuration.py
src/database/models/: base.py  user.py
src/jobs/: daily_report.py
src/lib/: basemenu.py  callback_context.py  crypto.py  helpers.py  messages.py
src/menus/: fallback.py  settings_menu.py  start.py
src/services/: monobank.py
tests/: conftest.py  test_crypto.py  test_helpers.py  test_models.py  test_monobank_service.py
